--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>二十四節気</title>
 
     <!-- PWA設定 -->
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1f2937">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="二十四節気">
+    <!-- iOSのフルスクリーン化を避けるため Apple Web App メタは撤去しました -->
 
     <!-- Favicon Links -->
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%23fdfdfd'/%3E%3Cpath d='M 50 0 A 50 50 0 0 1 100 50 L 50 50 Z' fill='%23a7e0e8'/%3E%3Cpath d='M 100 50 A 50 50 0 0 1 50 100 L 50 50 Z' fill='%23e09a73'/%3E%3Cpath d='M 50 100 A 50 50 0 0 1 0 50 L 50 50 Z' fill='%23ddebf0'/%3E%3Cpath d='M 0 50 A 50 50 0 0 1 50 0 L 50 50 Z' fill='%23ffd9e1'/%3E%3Ccircle cx='50' cy='50' r='22' fill='%23fdfdfd'/%3E%3Ctext x='50' y='62' font-family='Shippori Mincho, serif' font-size='38' fill='%234a4a4a' text-anchor='middle'%3E暦%3C/text%3E%3C/svg%3E">
