--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
                 </div>
             </div>
 
+            <!-- 週間天気（大阪市天王寺区） -->
+            <div class="washi-card rounded-2xl p-6 sm:p-8 mb-6 animate-fadeInUp">
+                <h3 class="text-lg sm:text-xl font-semibold text-gray-800 mb-4 text-center">向こう一週間の天気（大阪市天王寺区）</h3>
+                <div id="weeklyWeatherList" class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-7 gap-2 text-sm"></div>
+            </div>
+
             <!-- 節気の説明 -->
             <div class="washi-card rounded-2xl p-6 sm:p-8 mb-6 animate-fadeInUp">
                 <h3 class="text-lg sm:text-xl font-semibold text-gray-800 mb-4 text-center">二十四節気について</h3>
@@ -91,7 +97,7 @@
     <!-- JavaScript Files -->
     <script src="js/data/sekki-data.js?v=3"></script>
     <script src="js/animations/seasonal-animations.js?v=3"></script>
-    <script type="module" src="js/app-simple.js?v=3"></script>
+    <script type="module" src="js/app-simple.js?v=5"></script>
 
     <script>
         // アプリケーションの初期化
